<resources>
    <string name="app_name">HandyMan</string>
    <string name="welcome_to_handyman_finder">Welcome to HandyMan Finder</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="do_not_have_an_account_sign_up">Do not have an account? <u>Sign up</u></string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account_sign_in">Already have an account?<u>Sign in</u></string>
    <string name="message_lister">Message Lister</string>
    <string name="my_name">My Name</string>
    <string name="add_photos">Add Photos</string>
    <string name="user_image">User Image</string>
    <string name="user_job_title">Title</string>
    <string name="user_job_desc">Description</string>
    <string name="user_job_price">Price (hourly rate)</string>
    <string name="user_job_est_time">Estimated Time (in hours)</string>
    <string name="chart_btn">chart_btn</string>
    <string name="chart">Chart</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="send_msg">Send</string>
    <string name="type_a_message">Type a message</string>
    <string name="post">POST</string>
    <string name="logout">Logout</string>
    <string name="currently_posted_listings">Currently posted listings</string>
    <string name="location">Location</string>
    <string name="phone_number">Phone Number</string>
    <string name="add_job">Add Job</string>
    <string name="messages">Messages</string>
    <string name="alert_delete_posting">This listing will be removed permanently</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="ask_confirmation">Are you sure?</string>
    <string name="all_listings">All Listings</string>
    <string name="my_listings">My Listings</string>
    <string name="search_hint">e.g. Plumber</string>
    <string name="rate">Rate</string>
    <string name="remove_listing">Remove Listing</string>
    <string name="sort">sortByDate</string>
    <string name="sort_by_newest">Sort By Newest</string>
</resources>