<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    tools:context=".UserPostActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:padding="14dp"
                android:text="@string/my_name" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/userImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:contentDescription="@string/user_image"
                    android:padding="48dp" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/userImgAddBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="120dp"
                    android:layout_marginTop="22dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/add_photos"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:src="@drawable/ic_add"
                    android:tint="@color/design_default_color_primary_dark" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/userImgAddBtn"
                    android:layout_marginStart="20dp"
                    android:text="@string/add_photos"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userJobTitleContainer"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userJobTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/user_job_title"
                    android:lines="1"
                    android:padding="14dp"
                    android:textColorHint="#546E7A" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userJobDescContainer"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userJobDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/user_job_desc"
                    android:padding="14dp"
                    android:textColorHint="#546E7A" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userJobPriceContainer"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userJobPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/user_job_price"
                    android:padding="14dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userJobEstTimeContainer"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userJobEstTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/user_job_est_time"
                    android:padding="14dp"
                    android:textColorHint="#546E7A" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:padding="14dp">

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/add"
            android:minHeight="48dp"
            android:padding="4dp"
            android:src="@drawable/ic_add"
            android:tint="@color/design_default_color_primary_dark" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/search"
            android:minHeight="48dp"
            android:padding="4dp"
            android:src="@drawable/ic_search"
            android:tint="@color/design_default_color_primary_dark" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/chart"
            android:minHeight="48dp"
            android:padding="4dp"
            android:src="@drawable/ic_chart"
            android:tint="@color/design_default_color_primary_dark" />
    </LinearLayout>
</RelativeLayout>
